[package]
name = "slack-status"
version = "0.4.1"
authors = ["Nicolas Senaud <nsd@nsd.io>"]
edition = "2018"

[dependencies]
chrono = "0.4.10"
clap = {version = "2.33", features = ["yaml"]}
console = "0.9.1"
dialoguer = "0.5.0"
directories = "2.0.2"
fern = "0.5.9"
gh-emoji = "1.0.2"
log = "0.4.8"
reqwest = {version = "0.10.0", features = ["blocking", "json"]}
serde = "1.0.103"
serde_derive = "1.0.103"
serde_json = "1.0.44"
simple-error = "0.2.1"
toml = "0.5.5"
